docs(docs.css): prevent `<code>` elements from wrapping
Closes #4114

--- a/docs/src/templates/css/docs.css
+++ b/docs/src/templates/css/docs.css
@@ -132,6 +132,7 @@
   padding: 0;
   font-size: inherit;
   font-family: monospace;
+  white-space: nowrap;
 }
 
 .content h2,
